--- a/GNUmakefile.template
+++ b/GNUmakefile.template
@@ -67,13 +67,17 @@ OFILES = $(CFG_OFILES)
 # Compilation related
 ######################################################################
 
-.PHONY : all help show locale src/build.h
+.PHONY : all help show locale
+
+all: dvdisaster
+
+src/build.h:
+	@echo "Updating:" src/build.h
+	@$(SRCDIR)/scripts/time-stamper.bash $(SRCDIR)/src/build.h
 
 ${BUILDTMP}/%.o : src/%.c
 	@echo "Compiling:" $?
 	@$(CC) $(COPTS) -c $? -o $@
-
-all: dvdisaster
 
 ${BUILDTMP}/build.o : src/build.c src/build.h
 	@echo "Compiling:" src/build.o
@@ -81,11 +85,7 @@ ${BUILDTMP}/build.o : src/build.c src/build.h
 
 # Building the dvdisaster binary
 
-src/build.h:
-	@echo "Updating:" src/build.h
-	@$(SRCDIR)/scripts/time-stamper.bash $(SRCDIR)/src/build.h
-
-dvdisaster: $(ICONS) $(OFILES) src/build.h
+dvdisaster: $(ICONS) $(OFILES)
 	@echo "Linking  : dvdisaster"
 	@if test $(CFG_SYS_OPTIONS) == -DSYS_MINGW; \
 	then windres -v src/winres.rc -O coff -o ${BUILDTMP}/winres.o >/dev/null ; \
@@ -116,12 +116,8 @@ src/inlined-icons.h: icons/read.png icons/create.png icons/scan.png icons/fix.pn
 $(BUILDTMP)/help-dialogs.o: src/help-dialogs.c simple-md5sum
 	@if test -e fingerprints.md5; \
 	then if test -e src/help-dialogs.h; then rm src/help-dialogs.h; fi; \
-	     mv src/inlined-icons.h src/inlined-icons.saved; \
-	     mv src/build.h src/build.saved; \
-	     ./simple-md5sum -b src/*.h src/*.c | sort -k2 >tmp.md5; \
+	     ./simple-md5sum -b src/*.h src/*.c | grep -vF -e inlined-icons.h -e build.h | sort -k2 >tmp.md5; \
 	     sort -k2 < fingerprints.md5 >tmp2.md5; \
-	     mv src/inlined-icons.saved src/inlined-icons.h; \
-	     mv src/build.saved src/build.h; \
 	     if ! cmp tmp2.md5 tmp.md5 >/dev/null; \
 	     then echo "#define MODIFIED_SOURCE 1" >> src/help-dialogs.h; \
 	     else echo "#define UNMODIFIED_SOURCE 1" >> src/help-dialogs.h; \
@@ -294,7 +290,7 @@ archclean: distclean
 
 distclean: clean
 	@echo "Removing configuration files"
-	@rm -f configure.log Makefile.config GNUmakefile locale/Makefile
+	@rm -f configure.log Makefile.config src/build.h GNUmakefile locale/Makefile
 	@for i in locale/?? locale/??_??; do rm -rf $$i; done
 
 # There might be a not executable simple-md5sum from a compiler run
@@ -325,7 +321,7 @@ clean:
 	@$(MAKE) --no-print-directory -C $(SRCDIR)/documentation/user-manual clean;
 	@$(MAKE) --no-print-directory -C $(SRCDIR)/locale clean;
 
-BUILD=`grep BUILD $(SRCDIR)/build.h | cut -d ' ' -f 3`
+BUILD=`grep BUILD $(SRCDIR)/src/build.h | cut -d ' ' -f 3`
 arch:	archclean build.h
 	@cd .. ; tar -c -z -f $(TAR_PREFIX)/$(PKGNAME)-$(BUILD).tgz $(PKGNAME)
 
